# jtrader

./: .gitignore  README.md  config.yaml  jtrader.py  pyproject.toml  trading.py
scratch/: account.py  start.py  stream.py
src/jtrader/: cli.py  jtrader.py  trading.py
src/jtrader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
